# LearningRust

./: Cargo.toml  README.md  params.yaml
pendulum/: Cargo.toml  params.yaml
pendulum/src/: draw_2d.rs  draw_3d.rs  lib.rs  main.rs  math.rs  plot_2d.rs  utils.rs
pendulum/tests/: test_read_parameters.rs
sphere_springs/: Cargo.toml
sphere_springs/src/: draw_3d.rs  lib.rs  main.rs  math.rs
src/: draw_3d.rs  lib.rs
