[package]
name = "pendulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
plotters = "0.3.5"
three-d = "0.15.0"
winit = "0.28"

[[bin]]
name = "bla"
path = "src/bin/bla.rs"